syntax = "proto3";

message WelcomeResponseProtoMsg {
    bytes msgHash = 1;
}